--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <div id="root"></div>
 <script type="text/babel">
     /***
-     * class Component 
+     * class Component
      */
  class Welcome extends React.Component{
      render(){
-         return <h1> Hello World </h1>
+         return <h1> Hello World {this.props.message} </h1>
      }
  }
 
 ReactDOM.render(
-    <Welcome/>,
+    <Welcome message="mohan"/>,
     document.getElementById('root')
 )
 
