ls  Event handling with class component

--- a/index.html
+++ b/index.html
@@ -13,25 +13,30 @@
     /***
      * class Component
      */
- class Welcome extends React.Component{
-     constructor(props) {
-         super(props)
-         this.state =  {message :"mohan"}
-     }
+    class Counter extends React.Component{
+        constructor(props){
+            super(props)
+            this.state = {count:0}
+            //binding is necessary to make `this` point to the correct object
+            this.clickHandler = this.clickHandler.bind(this)
+        }
+        clickHandler(){
+            //increments the count of the state
+            this.setState((prevState,props) => {
+                return {count: prevState.count + 1}
+            })
+        }
+        render(){
+            //renders a button that displays the state count
+            return <button onClick = {this.clickHandler}>{this.state.count}</button>
+        }
+    }
 
-        componentDidMount(){
-         this.setState({message:"mohan kumar"})
-     }
+    ReactDOM.render(
+            <Counter/>,
+        document.getElementById("root")
+    )
 
-     render(){
-         return <h1> Hello World {this.state.message} </h1>
-     }
- }
-
-ReactDOM.render(
-    <Welcome/>,
-    document.getElementById('root')
-)
 
 </script>
 
